# compas_fd

./: .bumpversion.cfg  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  doc_versions.txt  environment_mac.yml  environment_win.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tasks.py  versions.json
.github/workflows/: build.yml  docs.yml  release.yml
0.1.1rc0/: .buildinfo  examples.html  genindex.html  index.html  intro.html  license.html  objects.inv  search.html
0.1.1rc0/.doctrees/: environment.pickle  gettingstarted.doctree  index.doctree
0.1.1rc0/_static/: documentation_options.js
0.1.1rc0/api/: compas_fofin.datastructures.html  compas_fofin.html  compas_fofin.rhino.html
0.1.1rc0/tutorial/: compute_equilibrium.html
0.2.0/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  py-modindex.html  searchindex.js
0.2.0/.doctrees/: api.doctree  examples.doctree  index.doctree  installation.doctree  license.doctree
0.3.0/: examples.html  genindex.html  installation.html  output.txt
0.3.1/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  searchindex.js  tutorial.html
0.3.1/api/: compas_fd.html  (+2 more)
0.4.0/: .buildinfo  api.html  genindex.html  license.html
0.4.1/: genindex.html  installation.html  py-modindex.html
0.4.2/: .buildinfo  api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  tutorial.html
0.5.0/: .buildinfo  examples.html  genindex.html  index.html  license.html  searchindex.js
0.5.1/: .buildinfo  api.html  index.html  installation.html  search.html  searchindex.js  tutorial.html
0.5.2/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  search.html  searchindex.js  tutorial.html
0.5.4/: api.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  tutorial.html
data/: hypar.json
docs/: .buildinfo  api.html  api.rst  conf.py  examples.html  genindex.html  gettingstarted.html  index.html  index.rst  installation.rst  intro.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html  tutorial.rst
docsource/: api.rst  conf.py  gettingstarted.rst  index.rst  tutorial.rst
examples/: basic.py  hypar.json
latest/: .buildinfo  api.html  examples.html  genindex.html  gettingstarted.html  index.html  installation.html  intro.html  license.html  objects.inv  output.txt  py-modindex.html  search.html  searchindex.js  tutorial.html
notebooks/: 00_basic.ipynb
scripts/: 91_nfd_hypar.py  92_nfd_hypar_opening.py  93_nfd_hypar_quads.py  94_nfd_hypar_quads_tris.py  95_nfd_hypar_support.py  96_nfd_hypar_anisotropic_stress_A.py  97_nfd_hypar_anisotropic_stress_B.py  98_nfd_hypar_shell.py  99_nfd_inflated_shell.py  test.py  test_cache.py  test_cache2.py  test_constraintdata.py  test_constraints.py  test_constraints_curve.py  test_constraints_frame.py  test_constraints_line.py  test_constraints_plane.py  test_constraints_surface.py  test_constraints_vector.py  test_cpp.py  test_fd_constraint_solver.py  test_fd_solver.py  test_iterative_mesh_fd.py  test_iterative_solver.py
stable/: .buildinfo  api.html  index.html  installation.html  objects.inv  output.txt  py-modindex.html  search.html  searchindex.js  tutorial.html
tests/: test_hypar.py  test_import.py  test_selfweight.py
(+356 files in other folders)
