[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

# ============================================================================
# project info
# ============================================================================

[project]
dynamic = ['dependencies', 'optional-dependencies']
name = "compas_fd"
version = "0.4.2"
authors = [{ name = "tom van mele", email = "tom.v.mele@gmail.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
]
description = "Constrained form finding using the Force Density Method."
keywords = ["form finding", "force density"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://blockresearchgroup.github.io/compas_fd"
Repository = "https://github.com/blockresearchgroup/compas_fd"

# ============================================================================
# setuptools config
# ============================================================================

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
optional-dependencies = { dev = { file = "requirements-dev.txt" } }

[tool.setuptools.packages.find]
where = ["src"]

# ============================================================================
# replace pytest.ini
# ============================================================================

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests", "src/compas_fd"]
python_files = ["test_*.py", "*_test.py", "test.py"]
addopts = ["-ra", "--strict", "--doctest-glob=*.rst", "--tb=short"]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ALLOW_UNICODE",
    "ALLOW_BYTES",
    "NUMBER",
]

# ============================================================================
# replace bumpversion.cfg
# ============================================================================

[tool.bumpversion]
current_version = "0.4.2"
message = "Bump version to {new_version}"
commit = "True"
tag = "True"

[[tool.bumpversion.files]]
filename = "compas_fd/__init__.py"
search = "{current_version}"
replace = "{new_version}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}] {now:%Y-%m-%d}"

# ============================================================================
# replace setup.cfg
# ============================================================================

[tool.black]
line-length = 119

[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.lint.isort]
force-single-line = true
known-first-party = ["compas_dr"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
